--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-community/netinfo": "^8.2.0",
+    "@react-native-picker/picker": "^2.4.0",
+    "aws-amplify": "^4.3.19",
+    "aws-amplify-react-native": "^6.0.4",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "2.2.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
