--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "@rneui/themed": "github:react-native-elements/react-native-elements#base",
     "aws-amplify": "^4.3.19",
     "aws-amplify-react-native": "^6.0.4",
     "expo": "~44.0.0",
@@ -30,6 +31,8 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-simple-toast": "^1.1.3",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
     "react-navigation": "4",
     "react-navigation-stack": "^1.10.3",
