--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@rneui/themed": "github:react-native-elements/react-native-elements#base",
+    "@stripe/react-stripe-js": "^1.7.2",
+    "@stripe/stripe-js": "^1.29.0",
+    "@stripe/stripe-react-native": "0.2.3",
     "aws-amplify": "^4.3.19",
     "aws-amplify-react-native": "^6.0.4",
+    "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
+    "fs": "^0.0.1-security",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^4.0.0-beta.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
@@ -37,7 +43,8 @@
     "react-navigation": "4",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.2.8",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "stripe": "^8.219.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
