--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@rneui/themed": "github:react-native-elements/react-native-elements#base",
-    "@stripe/react-stripe-js": "^1.7.2",
+    "@stripe/react-stripe-js": "^1.8.0-0",
     "@stripe/stripe-js": "^1.29.0",
     "@stripe/stripe-react-native": "0.2.3",
     "aws-amplify": "^4.3.19",
@@ -28,6 +28,7 @@
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
     "fs": "^0.0.1-security",
+    "metro": "^0.70.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -38,6 +39,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-stripe-payments": "^1.0.8",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
     "react-navigation": "4",
