Changes to the cart

--- a/app.json
+++ b/app.json
@@ -25,13 +25,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "app.ios.cartelCoffee"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "app.android.cartelCoffee"
     },
     "web": {
       "favicon": "./assets/favicon.png"
