--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "cartelcoffee",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -26,6 +25,7 @@
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "fs": "^0.0.1-security",
     "metro": "^0.70.3",
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-square-in-app-payments": "^1.7.1",
     "react-native-stripe-payments": "^1.0.8",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
